<resources>
    <string name="app_name">Photo App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Photo@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_album">Album</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_video">Video</string>
    <string name="nav_top_share">Share</string>
    <string name="nav_top_info">Info</string>
    <string name="nav_top_edit">Edit</string>
    <string name="nav_top_delete">Delete</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>