<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/nav_top_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_24"
        android:title="@string/nav_top_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/nav_top_info"
        app:showAsAction="ifRoom" />
<!--    <item-->
<!--        android:id="@+id/more"-->
<!--        android:title="@string/more"-->
<!--        android:contentDescription="@string/content_description_more"-->
<!--        app:showAsAction="never" />-->
</menu>