<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.photo_app.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_album" />

    <fragment
        android:id="@+id/nav_album"
        android:name="com.example.photo_app.ui.album.AlbumFragment"
        android:label="@string/menu_album"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.example.photo_app.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_gallery" />
</navigation>